removed client info

--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
 
 				<section data-transition="cube">
 					<h2>It's 2011</h2>
-					<p>A client at a well known fitness magazine<br />
-					sees an example of CSS3 animation...</p>
+					<p>Our client sees an example of CSS3 animation...</p>
 					<img src="images/yippy.jpg" width="40%" alt="Boss man">
 					<blockquote class="fragment" cite="Awesome Client">
 						We gotta have this on our home page!
